# constitutional-os

./: CHANGELOG-SPEC.md  CHANGELOG.md  ECOSYSTEM.md  LICENSE  PUBLISHING.md  Procfile  README.md  ROADMAP.md  SPEC-VERSION.md  api.py  constitution.yaml  main.tex  pyproject.toml  refs.bib  requirements.txt  start.py
docs/: constitution-builder.html  index.html  playground.html
examples/research-agent/: agent.py
rfc/: RFC-0001-core-spec.md  RFC-0002-membrane-schema.md  RFC-0003-reversible-delta-contract.md  RFC-0004-continuity-chain-format.md
spec/v1/: continuity-chain.md  membranes.md  reversible-deltas.md  state-machine.md
src/constitutional_os/: __init__.py
src/constitutional_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/constitutional_os/actions/: deltas.py  engine.py
src/constitutional_os/console/: cli.py
src/constitutional_os/evals/: runner.py
src/constitutional_os/forecast/: engine.py
src/constitutional_os/invariants/: engine.py
src/constitutional_os/membranes/: engine.py
src/constitutional_os/profiles/: loader.py
src/constitutional_os/runtime/: boot.py  events.py  loop.py  operators.py  state.py  theory.py  visualization.py
tests/: conftest.py  test_actions.py  test_evals.py  test_forecast.py  test_invariants.py  test_membranes.py  test_profiles.py  test_runtime.py  test_theory.py
tools/: validate_constitution.py
